# scopehal

./: .gitmodules  LICENSE
scopeexports/: CMakeLists.txt  CSVExportWizard.cpp  CSVExportWizard.h  ExportWizard.cpp  ExportWizard.h  TouchstoneExportWizard.cpp  TouchstoneExportWizard.h  VCDExportWizard.cpp  VCDExportWizard.h  scopeexports.cpp  scopeexports.h
scopehal/: .clang-format  AcceleratorBuffer.h  ActionProvider.cpp  ActionProvider.h  AgilentEdgeTrigger.cpp  AgilentEdgeTrigger.h  AgilentMultimeter.cpp  AgilentMultimeter.h  AgilentOscilloscope.cpp  AgilentOscilloscope.h  AlientekPowerSupply.cpp  AlientekPowerSupply.h  AlignedAllocator.h  AnalogRenderer.cpp  AnalogRenderer.h  AntikernelLabsGPIO.cpp  AntikernelLabsGPIO.h  AntikernelLabsILA.cpp  AntikernelLabsILA.h  AntikernelLabsOscilloscope.cpp  AntikernelLabsOscilloscope.h  AntikernelLabsSerdesILA8b10b.cpp  AntikernelLabsSerdesILA8b10b.h  AntikernelLabsTriggerCrossbar.cpp  AntikernelLabsTriggerCrossbar.h  AntikernelLabsVIO.cpp  AntikernelLabsVIO.h  AntikernelLogicAnalyzer.cpp  AntikernelLogicAnalyzer.h  AsciiRenderer.cpp  AsciiRenderer.h  AseqSpectrometer.cpp  AseqSpectrometer.h  Averager.cpp  Averager.h  BERT.cpp  BERT.h  BERTInputChannel.cpp  BERTInputChannel.h  BERTInputChannelWithDataCapture.cpp  (+385 more)
scopehal/channels/: 300mm-s2000m.s2p
scopehal/shaders/: CMakeLists.txt  ConstellationNormalizeReduce.glsl  ConstellationNormalizeScale.glsl  Convert16BitSamples.glsl  Convert16BitSamplesDual.glsl  Convert16BitSamplesDualOffset.glsl  Convert8BitSamples.glsl  Convert8BitSamplesQuad.glsl  Convert8BitSamplesQuadOffset.glsl  Convert8BitSamplesWithClipDetection.glsl  DeEmbedFilter.glsl  DegradeSerialData.glsl  EyeNormalizeReduce.glsl  EyeNormalizeScale.glsl  FindZeroCrossings.glsl  Gather.glsl  GetComputeBlockCount.h.glsl  Histogram.glsl  InterpolateTime.h.glsl  InterpolateValue.h.glsl  MinMax.glsl  NoisySine.glsl  NoisySineSum.glsl  PreGather.glsl  RectangularWindow.glsl  ReductionSum.glsl
scopemeasurements/: AvgVoltageMeasurement.cpp  AvgVoltageMeasurement.h  BaseMeasurement.cpp  BaseMeasurement.h  CMakeLists.txt  DramRefreshActivateLatencyMeasurement.cpp  DramRefreshActivateLatencyMeasurement.h  DramRowColumnLatencyMeasurement.cpp  DramRowColumnLatencyMeasurement.h  EyeBitRateMeasurement.cpp  EyeBitRateMeasurement.h  EyeHeightMeasurement.cpp  EyeHeightMeasurement.h  EyeJitterMeasurement.cpp  EyeJitterMeasurement.h  EyePeriodMeasurement.cpp  EyePeriodMeasurement.h  EyeWidthMeasurement.cpp  EyeWidthMeasurement.h  Fall1090Measurement.cpp  Fall1090Measurement.h  Fall2080Measurement.cpp  Fall2080Measurement.h  FrequencyMeasurement.cpp  FrequencyMeasurement.h  MaxVoltageMeasurement.cpp  MaxVoltageMeasurement.h  MinVoltageMeasurement.cpp  MinVoltageMeasurement.h  OvershootMeasurement.cpp  OvershootMeasurement.h  PeriodMeasurement.cpp  PeriodMeasurement.h  PkPkVoltageMeasurement.cpp  PkPkVoltageMeasurement.h  Rise1090Measurement.cpp  Rise1090Measurement.h  Rise2080Measurement.cpp  Rise2080Measurement.h  TopMeasurement.cpp  (+5 more)
scopeprotocols/: ACCoupleDecoder.cpp  ACCoupleDecoder.h  ACCoupleFilter.cpp  ACCoupleFilter.h  ACRMSMeasurement.cpp  ACRMSMeasurement.h  ADL5205Decoder.cpp  ADL5205Decoder.h  APBDecoder.cpp  APBDecoder.h  AddFilter.cpp  AddFilter.h  AreaMeasurement.cpp  AreaMeasurement.h  AutocorrelationDecoder.cpp  AutocorrelationDecoder.h  AutocorrelationFilter.cpp  AutocorrelationFilter.h  AverageFilter.cpp  AverageFilter.h  AverageStatistic.cpp  AverageStatistic.h  BINImportFilter.cpp  BINImportFilter.h  BandwidthMeasurement.cpp  BandwidthMeasurement.h  BaseMeasurement.cpp  BaseMeasurement.h  BaseMeasurementDecoder.cpp  BaseMeasurementDecoder.h  BurstWidthMeasurement.cpp  BurstWidthMeasurement.h  BusHeatmapFilter.cpp  BusHeatmapFilter.h  CANAnalyzerFilter.cpp  CANAnalyzerFilter.h  CANBitmaskFilter.cpp  CANBitmaskFilter.h  CANDecoder.cpp  CANDecoder.h  (+532 more)
scopeprotocols/kernels/: DeEmbedFilter.cl  FFTNormalization.cl  FIRFilter.cl  WindowFunctions.cl
scopeprotocols/shaders/: ACRMS.glsl  ACRMS_Trend.glsl  AddFilter.glsl  ApplySParametersCascaded.glsl  ApplySParametersInPlaceCascaded.glsl  BaseMeasurement_FinalPass.glsl  BaseMeasurement_FirstPass.glsl  BlackmanHarrisWindow.glsl  CMakeLists.txt  ClipFilter.glsl  ClockRecoveryPLL_FinalPass.glsl  ClockRecoveryPLL_FirstPass.glsl  ClockRecoveryPLL_SecondPass.glsl  ComplexBlackmanHarrisWindow.glsl  ComplexCosineSumWindow.glsl  ComplexRectangularWindow.glsl  ComplexSpectrogramPostprocess.glsl  ComplexToLogMagnitude.glsl  ComplexToMagnitude.glsl  ConstellationFilter.glsl  Convert16BitSamples.glsl  Convert8BitSamples.glsl  CosineSumWindow.glsl  CouplerDeEmbedFilter_ForwardPath.glsl  DDJMeasurement.glsl  DeEmbedFilter.glsl  DeEmbedNormalization.glsl  DeEmbedOutOfPlace.glsl  Downconvert.glsl  DownsampleNoAAFilter.glsl  DownsampleWithAAFilter.glsl  DutyCycleMeasurement.glsl  EmphasisFilter.glsl  EnvelopeFilter.glsl  Ethernet100BaseT1_Decoder.glsl  Ethernet100BaseT1_Descrambler.glsl  Ethernet100BaseT1_PAM3Decoder.glsl  Ethernet100BaseTXDescrambler.glsl  Ethernet100BaseTX_4b5bDecode.glsl  Ethernet100BaseTX_Descrambler.glsl  (+53 more)
